# web_m7

./: README.md
web_hm7/: .project  alembic.ini  config.ini  main.py  pyproject.toml
web_hm7/conf/: models.py  seed.py
web_hm7/migrations/: env.py
web_hm7/migrations/versions/: 11140fd34269_fackers3.py  d22a84a1a812_fackers.py  e8a92e17248a_fackers2.py  ec8f0a2e59e0_init.py  fa7182c76ee3_init.py
