[tool.poetry]
name = "partweb-7m"
version = "0.1.0"
description = ""
authors = ["OlgaSirenko <132263673+CamillaSirenko@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.23"
poetry = "^1.7.0"
psycopg2 = "^2.9.9"
alembic = "^1.12.1"
faker = "^19.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
